# ChangeLog for media-libs/gd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/ChangeLog,v 1.105 2015/02/28 22:27:05 vapier Exp $

  28 Feb 2015; Mike Frysinger <vapier@gentoo.org> +files/gd-2.1.1-headers.patch,
  gd-2.1.1.ebuild:
  Fix out-of-tree test builds #540376 by tka.

*gd-2.1.1 (16 Feb 2015)

  16 Feb 2015; Mike Frysinger <vapier@gentoo.org> +gd-2.1.1.ebuild,
  metadata.xml:
  Version bump #478066 by Meik Frischke.

  11 Oct 2014; Markus Meier <maekke@gentoo.org> gd-2.0.35-r4.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for sparc, wrt bug #512012

  07 Sep 2014; Fabian Groffen <grobian@gentoo.org> gd-2.0.35-r4.ebuild:
  Add back font paths for as long as we don't understand why fontconfig doesn't
  work, bug #518970

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for ppc64, wrt bug #512012

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for HPPA (bug #512012).

  05 Aug 2014; Christoph Junghans <ottxor@gentoo.org> gd-2.0.35-r4.ebuild:
  added prefix support (bug #518970)

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gd-2.0.35-r4.ebuild:
  Stable for amd64, wrt bug #512912

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> gd-2.0.35-r4.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

  15 Jun 2014; Mike Frysinger <vapier@gentoo.org> gd-2.0.35-r3.ebuild,
  gd-2.0.35-r4.ebuild:
  Add arm64 love.
