@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/gd-2.1.1.ebuild,v 1.2 2015/02/28 22:27:05 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/gd-2.1.1.ebuild,v 1.3 2015/03/07 20:09:49 vapier Exp $
 
 EAPI="5"
 
@@ -13,7 +13,7 @@ SRC_URI="https://bitbucket.org/libgd/gd-libgd/downloads/lib${P}.tar.xz"
 LICENSE="gd IJG HPND BSD"
 SLOT="2/3"
 KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE="fontconfig jpeg png static-libs truetype xpm zlib"
+IUSE="fontconfig jpeg png static-libs truetype webp xpm zlib"
 
 # fontconfig has prefixed font paths, details see bug #518970
 REQUIRED_USE="prefix? ( fontconfig )"
@@ -22,6 +22,7 @@ RDEPEND="fontconfig? ( >=media-libs/fontconfig-2.10.92[${MULTILIB_USEDEP}] )
 	jpeg? ( >=virtual/jpeg-0-r2:0[${MULTILIB_USEDEP}] )
 	png? ( >=media-libs/libpng-1.6.10:0[${MULTILIB_USEDEP}] )
 	truetype? ( >=media-libs/freetype-2.5.0.1[${MULTILIB_USEDEP}] )
+	webp? ( media-libs/libvpx[${MULTILIB_USEDEP}] )
 	xpm? ( >=x11-libs/libXpm-3.5.10-r1[${MULTILIB_USEDEP}] >=x11-libs/libXt-1.1.4[${MULTILIB_USEDEP}] )
 	zlib? ( >=sys-libs/zlib-1.2.8-r1[${MULTILIB_USEDEP}] )"
 DEPEND="${RDEPEND}
@@ -45,6 +46,7 @@ multilib_src_configure() {
 		$(use_with png) \
 		$(use_with truetype freetype) \
 		$(use_with jpeg) \
+		$(use_with webp vpx) \
 		$(use_with xpm) \
 		$(use_with zlib)
 }
