@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gd
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/ChangeLog,v 1.105 2015/02/28 22:27:05 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/ChangeLog,v 1.106 2015/03/07 20:09:49 vapier Exp $
+
+  07 Mar 2015; Mike Frysinger <vapier@gentoo.org> gd-2.1.1.ebuild, metadata.xml:
+  Add USE=webp to control the libvpx dep #541854 by Anthony Parsons.
 
   28 Feb 2015; Mike Frysinger <vapier@gentoo.org> +files/gd-2.1.1-headers.patch,
   gd-2.1.1.ebuild:
